# FlashSamplePack

./: .gitignore  README.md  pyproject.toml  setup.py  test_loss_deviation.py
examples/: no_pack_train.py  train.py  train_no_pack.py  with_transformers_no_pack.py  zero2.json  zero3.json
flash_sample_pack/: __init__.py  attention_utils.py  chat_templates.py  collator.py  dataset.py  distributed.py  patch.py  sampler.py
flashpack/: __init__.py  attention_utils.py  collator.py  dataset.py  distributed.py  patch.py  sampler.py
tests/: test_multipack_attention.py
