[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashpack"
version = "1.0.0"
description = "Sample packing for Flash Attention with HuggingFace Transformers"
authors = [
    {name = "Casper Hansen", email = "casperbh.96@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "torch",
    "numba",
    "transformers==4.50.3",
    "datasets==3.5.0",
    "accelerate==1.5.2",
    "numpy>=1.24.4,<=2.0.1",
    "flash-attn==2.7.4.post1",
]

[project.optional-dependencies]
train = [
    "trl",
]
dev = [
    "black",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/casper-hansen/FlashSamplePack"